# core

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: TestCoverage.cmake  TestCoverage.custom.cmake
coverage/: gcov.css  lcovrc.in
doc/: CMakeLists.txt  Doxyfile.in
include/zzbgames/core/: Version.hpp
include/zzbgames/text/: Font.hpp  Text.hpp  Version.hpp
include/zzbgames/tiles/: Tileset.hpp  Version.hpp
include/zzbgames/util/: Dimension.hpp  ImageComparator.hpp  Insets.hpp  Version.hpp
src/: CMakeLists.txt
src/text/: CMakeLists.txt  Font.cpp  Text.cpp
src/tiles/: CMakeLists.txt  Tileset.cpp
src/util/: CMakeLists.txt  Dimension.cpp  ImageComparator.cpp  Insets.cpp
test/: CMakeLists.txt
test/text/: FontImpl.cpp  FontImpl.hpp  TextTest.cpp
test/tiles/: TilesetTest.cpp
test/util/: DimensionTest.cpp  ImageComparatorTest.cpp  InsetsTest.cpp
